# SplatLib

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  README_8md.html  annotated.html  btree_8h.html  btree_8h__dep__incl.map  btree_8h__dep__incl.md5  btree_8h__incl.map  btree_8h__incl.md5  btree_8h_source.html  classThreadPool-members.html  classThreadPool.html  classes.html  classsplat_1_1BTree.html  classsplat_1_1BTree__coll__graph.map  classsplat_1_1BTree__coll__graph.md5  classsplat_1_1CompressedChunk.html  classsplat_1_1Crc.html  classsplat_1_1DataTable.html  classsplat_1_1KdTree.html  classsplat_1_1Logger.html  classsplat_1_1ZipEntry.html  classsplat_1_1ZipReader.html  classsplat_1_1ZipWriter-members.html  classsplat_1_1ZipWriter.html  compressed__chunk_8h.html  compressed__chunk_8h__dep__incl.map  compressed__chunk_8h__dep__incl.md5  compressed__chunk_8h__incl.map  compressed__chunk_8h__incl.md5  compressed__chunk_8h_source.html  compressed__ply__writer_8h.html  compressed__ply__writer_8h__dep__incl.map  compressed__ply__writer_8h__dep__incl.md5  compressed__ply__writer_8h__incl.map  compressed__ply__writer_8h__incl.md5  compressed__ply__writer_8h_source.html  crc_8h.html  (+276 more)
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  gpudevice.h  main.cpp  options.h  process.h  writer.cpp
doxygen/: Doxygen.in
examples/: .gitignore
include/: CMakeLists.txt
include/splat/: data_table.h  logger.h  splat.h  zip_reader.h  zip_writer.h
include/splat/maths/: btree.h  kmeans.h  rotate-sh.h
include/splat/models/: data-table.h  morton-order.h  ply.h  sog.h
include/splat/op/: filter-visibility.h  summary.h
include/splat/readers/: decompress_ply.h  ksplat_reader.h  lcc_reader.h  sog_reader.h  splat_reader.h  spz_reader.h
include/splat/spatial/: btree.h  kdtree.h  kmeans.h
include/splat/utils/: zip-writer.h
include/splat/writers/: compressed_chunk.h  compressed_ply_writer.h  lod_writer.h  sog_writer.h
maths/: rotate-sh.h
python/: CMakeLists.txt
readers/: splat_reader.h  webp-codec.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+73 more)
serialize/: crc.h
src/: CMakeLists.txt  crc.cpp  data_table.cpp  webp-codec.cpp  zip_reader.cpp  zip_writer.cpp
src/io/: compressed_chunk.cpp  compressed_ply_writer.cpp  csv_writer.cpp  decompress_ply.cpp  ksplat_reader.cpp  lcc_reader.cpp  lod_writer.cpp  ply_reader.cpp  ply_writer.cpp  sog_reader.cpp  sog_writer.cpp  splat-writer.cpp  splat_reader.cpp  spz_reader.cpp
src/maths/: btree.cpp  kdtree.cpp  kmeans.cpp  rotate-sh.cpp
src/models/: data-table.cpp  morton-order.cpp  morton-order.cu  sog.cpp
src/op/: filter-visibility.cpp  summary.cpp
src/readers/: decompress_ply.cpp  ksplat_reader.cpp  lcc_reader.cpp  ply_reader.cpp  sog_reader.cpp
src/spatial/: btree.cpp  kdtree.cpp  kmeans.cu
src/utils/: crc.cpp  webp-codec.cpp  zip-reader.cpp  zip-writer.cpp
src/writers/: compressed_ply_writer.cpp  csv_writer.cpp  lod_writer.cpp  sog_writer.cpp
transform/: main.cpp  reader.cpp
utils/: data_table.h
viewer/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  main.cpp  shadermanager.cpp  shadermanager.h  splatrenderer.cpp  splatrenderer.h
viewer/shaders/: splat.frag  splat.vert
writers/: csv-writer.h
